3 dot click popup z-index issue solved

--- a/src/App.css
+++ b/src/App.css
@@ -215,8 +215,8 @@ color: #fff; cursor: pointer; flex-basis: 0; font: 450 12px / 18px "Inter",sans-
 .pdstage-boxlink, .pdstage-boxlink:focus{color: #21232c; text-decoration: none; outline: 0;}
 .pdstage-boxlink:hover{color: #21232c; text-decoration: none;}
 .pdstage-title{font-weight:bold; overflow: hidden; white-space: nowrap; text-overflow: ellipsis; position: relative; padding-right: 20px;}
-.dropdownbox-toolgripdot {position: absolute; right: 0; top: 0; z-index: 1;}
-.dropdownbox-toolgripdot .toolgrip-dot, .dropdownbox-toolgripdot .toolgrip-dot:focus {background-color: inherit; color: #21232c; padding: 0px 5px; border: none; height: 20px; width: 20px; cursor: pointer;}
+.dropdownbox-toolgripdot {position: absolute; right: 0; top: 5px;}
+.dropdownbox-toolgripdot .toolgrip-dot, .dropdownbox-toolgripdot .toolgrip-dot:focus {background-color: inherit; color: #21232c; padding: 0px 5px; border: none; height: 22px; width: 20px; cursor: pointer;}
 .dropdownbox-toolgripdot .toolgrip-dot:hover, .dropdownbox-toolgripdot .toolgrip-dot:focus{background-color: inherit; color: #21232c;}
 .dropdownbox-toolgripdot .toolgrip-dot:after{display: none;}
 
